# SilentSpeaker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
SilentSpeaker/: CMakeLists.txt
SilentSpeaker/include/: AsioServer.h  ConnectionToClient.h  ConnectionToServer.h  IConnection.h  IServer.h  Message.h
SilentSpeaker/src/: AsioServer.cpp  Main.cpp  Message.cpp  initRepo.cpp  initRepo.h
UnitTests/: CMakeLists.txt
UnitTests/src/: MainUT.cpp  TestMessage.cpp  initTest.cpp
